# src/endpoints/persons.rs
@@ -4,16 +4,14 @@ use crate::{
     toolbox::{errors::CustomError, uid_extractor::get_uid_from_request},
 };
 use actix_web::{web, HttpRequest, HttpResponse, Result};
-use serde_json::json;
 
 // GET HOST/persons
 pub async fn find_all(
     request: HttpRequest,
     pool: web::Data<Pool>,
-) -> Result<HttpResponse, CustomError> {
+) -> Result<HttpResponse> {
     let uid = get_uid_from_request(&request)?;
-    let conn = pool.get()?;
-    let persons = Person::find_all(uid, &conn)?;
+    let persons = Person::find_all(uid, &pool)?;
     Ok(HttpResponse::Ok().json(persons))
 }
 
@@ -22,10 +20,9 @@ pub async fn find(
     person_id: web::Path<i32>,
     request: HttpRequest,
     pool: web::Data<Pool>,
-) -> Result<HttpResponse, CustomError> {
+) -> Result<HttpResponse> {
     let uid = get_uid_from_request(&request)?;
-    let conn = pool.get()?;
-    let person = Person::find_by_id(uid, person_id.into_inner(), &conn)?;
+    let person = Person::find_by_id(uid, person_id.into_inner(), &pool)?;
     Ok(HttpResponse::Ok().json(person))
 }
 
@@ -34,16 +31,15 @@ pub async fn create(
     query_content: web::Json<ReceivedPerson>,
     request: HttpRequest,
     pool: web::Data<Pool>,
-) -> Result<HttpResponse, CustomError> {
+) -> Result<HttpResponse> {
     debug!(
         "We receided a post request with this content: {:?}",
         query_content
     );
     let uid = get_uid_from_request(&request)?;
     let received_person = query_content.clone();
-    let conn = pool.get()?;
-    let response_data = Person::create(uid, received_person, &conn)?;
-    Ok(HttpResponse::Ok().json(response_data))
+    let created_person = Person::create(uid, received_person, &pool)?;
+    Ok(HttpResponse::Ok().json(created_person))
 }
 
 // PUT HOST/persons/
@@ -51,17 +47,16 @@ pub async fn update(
     request: HttpRequest,
     query_content: web::Json<Person>,
     pool: web::Data<Pool>,
-) -> Result<HttpResponse, CustomError> {
+) -> Result<HttpResponse> {
     info!(
         "We receided an update request with this content: {:?}",
         query_content
     );
     let uid = get_uid_from_request(&request)?;
 
-    let updated_person = query_content.clone();
-    let conn = pool.get()?;
-    let todo = Person::update(uid, updated_person, &conn)?;
-    Ok(HttpResponse::Ok().json(todo))
+    let person_to_update = query_content.clone();
+    let updated_person = Person::update(uid, person_to_update, &pool)?;
+    Ok(HttpResponse::Ok().json(updated_person))
 }
 
 // DELETE HOST/person/{id}
@@ -69,9 +64,8 @@ pub async fn delete(
     id: web::Path<i32>,
     request: HttpRequest,
     pool: web::Data<Pool>,
-) -> Result<HttpResponse, CustomError> {
+) -> Result<HttpResponse> {
     let uid = get_uid_from_request(&request)?;
-    let conn = pool.get()?;
-    let deleted_person = Person::delete(uid, id.into_inner(), &conn)?;
-    Ok(HttpResponse::Ok().json(json!({ "deleted": deleted_person })))
+    let deleted_person = Person::delete(uid, id.into_inner(), &pool)?;
+    Ok(HttpResponse::Ok().body(format!("Deleted the person '{}'", deleted_person.name)))
 }
